config/ip6tables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#### SSH/SCP/SFTP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#### DNS Services (ISC BIND/IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 53 -j ACCEPT
#### TFTP Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 69 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 69 -j ACCEPT
#### HTTPD - Recommend forwarding traffic to HTTPS 443
#### Recommended Article: http://www.cyberciti.biz/tips/howto-apache-force-https-secure-connections.html
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
#### Kerberos Authentication (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 88 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 88 -j ACCEPT
#### NTP Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 123 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 123 -j ACCEPT
#### LDAP (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 389 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 389 -j ACCEPT
#### HTTPS
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
#### Kerberos Authentication - kpasswd (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 464 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 464 -j ACCEPT
#### RSYSLOG Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 514 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 514 -j ACCEPT
#### LDAPS - LDAP via SSL (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 636 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 636 -j ACCEPT
#### NFSv4 Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 2049 -j ACCEPT
#### iSCSI Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 3260 -j ACCEPT
#### TOMCAT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 8080 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 8443 -j ACCEPT
# IPv6 Echo/Reply
-A INPUT -p ipv6-icmp --icmpv6-type 128 -m limit --limit 15/sec -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type 129 -m limit --limit 15/sec -j ACCEPT
# IPv6 Neighbor Discovery (icmp-type 133-137)
-A INPUT -p ipv6-icmp --icmpv6-type 133 -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type 134 -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type 135 -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type 136 -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type 137 -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p ipv6-icmp -j LOG --log-prefix "Dropped ICMPv6 Packets "
-A INPUT -p ipv6 -j DROP
COMMIT
