config/iptables
#################################################################################################################
# STIG-FIX IPTABLES Configuration
#################################################################################################################
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
# Allow Traffic that is established or related
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# Allow ICMP (Ping)
-A INPUT -p icmp -j ACCEPT
# Allow Traffic on LOCALHOST/127.0.0.1
-A INPUT -i lo -j ACCEPT
#### SSH/SCP/SFTP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#### DNS Services (ISC BIND/IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 53 -j ACCEPT
#### TFTP Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 69 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 69 -j ACCEPT
#### HTTPD - Recommend forwarding traffic to HTTPS 443
####   Recommended Article: http://www.cyberciti.biz/tips/howto-apache-force-https-secure-connections.html
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
#### Kerberos Authentication (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 88 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 88 -j ACCEPT
#### NTP Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 123 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 123 -j ACCEPT
#### LDAP (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 389 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 389 -j ACCEPT
#### HTTPS
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
#### Kerberos Authentication - kpasswd (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 464 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 464 -j ACCEPT
#### RSYSLOG Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 514 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 514 -j ACCEPT
#### LDAPS - LDAP via SSL (IdM/IPA)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 636 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 636 -j ACCEPT
#### NFSv4 Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 2049 -j ACCEPT
#### iSCSI Server
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 3260 -j ACCEPT
#### TOMCAT 
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 8080 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 8443 -j ACCEPT
#################################################################################################################
#### SPICE/VNC Client (KVM)
#-A INPUT -m state --state NEW -m tcp -p tcp --match multiport --dports 5634:6166 -j ACCEPT
#### RHEVM (ActiveX Client)
#-A INPUT -m state --state NEW -m tcp -p tcp --match multiport --dports 8006:8009 -j ACCEPT
#### KVM VM Migration (Recommend Limiting to Private Network)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 16514 -s 192.168.0.0/24 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --match multiport --dports 49152:49216 -s 192.168.0.0/24 -j ACCEPT
#### KVM Virtual Desktop and Server Manager (VDSM) Service (Reccomend Limiting to Private Network)
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 54321 -s 192.168.0.0/24 -j ACCEPT
#################################################################################################################
# Block timestamp-request and timestamp-reply
-A INPUT -p ICMP --icmp-type timestamp-request -j DROP
-A INPUT -p ICMP --icmp-type timestamp-reply -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
